// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropsTable Should render correctly 1`] = `
<PropsTable
  className="css-16kddqz"
/>
`;

exports[`PropsTable Should render correctly with props 1`] = `
<PropsTable
  className="css-16kddqz"
  props={
    Object {
      "defaultValue": "false",
      "name": "Hello",
    }
  }
/>
`;
